syntax = "proto3";

import "google/protobuf/empty.proto";

package examples.quorum;

service QuorumKeyValue {
  rpc getBy (GetValueByKeyRequest) returns (GetValueByKeyResponse) {}
  rpc acknowledge_get (CorrelatingGetValueByKeyRequest) returns (google.protobuf.Empty) {}
  rpc finish_get (GetValueByKeyResponse) returns (google.protobuf.Empty) {}
}

message GetValueByKeyRequest {
  string key = 1;
}

message CorrelatingGetValueByKeyRequest {
  //tag id 1 is reserved for correlation_id generated using procedural macro
  string key = 2;
}

message GetValueByKeyResponse {
  //tag id 1 is reserved for correlation_id generated using procedural macro
  string key = 2;
  string value = 3;
}